tests/errors/fsm-constant-trig.fil
comp main<G>(@interface[G, G+1] go_G: 1) -> () {
  fsm M[5](10);
}
